Grid Overflows in Blogs Fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,11 @@
  For testing purposes
  ----------------------------------*/
 .test-border {
-  border: 5px solid green;
+  border: 5px solid magenta;
 }
 
 section.test-border {
-  border: 5px solid red;
+  border: 5px solid green;
 }
 
 /* --------------------------------
@@ -203,7 +203,7 @@ header .link-button {
 
 #fixture-and-blog {
   grid-template-columns: 1fr 3fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: minmax(0, 1fr);
   grid-auto-flow: row;
   gap: 1%;
 }
@@ -232,13 +232,9 @@ header .link-button {
 
 #fixture-and-blog div#content-grid {
   grid-template-columns: repeat(3, 1fr);
-  /* grid-auto-rows: 1fr; */
+  grid-auto-rows: minmax(0, 1fr);
   grid-auto-flow: row;
   gap: 1%;
-}
-
-#fixture-and-blog div#content-grid > * {
-  min-height: 0;
 }
 
 #fixture-and-blog div#content-grid .blog-image img {
@@ -280,6 +276,7 @@ header .link-button {
 @media screen and (max-width: 768px) {
   #fixture-and-blog {
     grid-template-columns: 1fr;
+    grid-template-rows: auto minmax(0, 1fr);
   }
 
   #fixture-and-blog nav {
@@ -297,6 +294,7 @@ header .link-button {
 
   #fixture-and-blog div#content-grid {
     grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: minmax(0, 1fr);
   }
 
   #fixture-and-blog div#content-grid .topic,
